--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,10 +21,7 @@ header {
   .right-column {
     width: 30%;
   }
-
-  .container {
-    padding: 1%;
-} */
+  */
 
 body {
     margin: 0 auto;
@@ -56,39 +53,24 @@ body {
 }
 
 .content-wrapper {
-    display: flex;
-    padding: 5px 0;
-    margin: 0 10px;
+    /*display: flex;*/
+    /*padding: 5px 0;*/
+    /*margin: 0 10px;*/
 }
-
 .main-content {
-    width: 100%;
-    display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
-    height: 1325px;
-    margin-right: 10px;
-    background: #FFFFFF;
+    height: 100vh;
+    background-color: #e8e8e8;
 }
-
-.side-bar-content {
-    display: flex;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 125px;
-    width: 185px;
-    height: 500px;
-    border: 1px solid;
+.container {
+    background-color: #fff;
+    padding: 0;
 }
-
 .footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100px;
-    color: white;
-    background: #000000;
+    height: 20vh;
+    background-color: #adadad;
 }
+
+
 .my-page-top {
     border: 1px solid black;
     height: 100px;
@@ -121,17 +103,36 @@ body {
     margin: 0;
 }
 .lesson-list-container {
-    display: flex;
-    float: left;
-    height: 200px;
+    padding-top: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+
+.language-item {
+    margin-bottom: 20px;
+    /*width: 95%;*/
+}
+.image-item {
+    border-radius : 8px 0 0 8px; 
+    background-color: #adadad;
+}
+.image-item > img {
+    width: 50%;
+    height: 50%;
 }
 .item {
-    width: 200px;
-    height: 200px;
     background-color: skyblue;
-    margin: 20px;
-    text-align: center;
+    /*text-align: center;*/
+    border-radius : 8px; 
 }
+.sidemenu {
+    margin-bottom: 10px;
+    background-color: #adadad;
+}
+
+
+
 .lesson-list-header {
     margin: 30px;
     background-color: bisque;
