topページの編集

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,11 @@ body {
     margin: 0 auto;
     padding: 0;
     color: #333;
+    background-color: #f8f8f8!important;
 }
+/*.header-container {*/
+/*    background-color: #f8f8f8;*/
+/*}*/
 .header-wrapper {
     width: 100%;
     justify-content: flex-start;
@@ -59,10 +63,10 @@ body {
 }
 .main-content {
     height: 100vh;
-    background-color: #e8e8e8;
+    background-color: #f8f8f8;
 }
 .container {
-    background-color: #fff;
+    /*background-color: #fff;*/
     padding: 0;
 }
 .footer {
@@ -76,11 +80,11 @@ body {
     height: 100px;
     top: 20px;
 }
-.head-user {
-    height: 700px;
-    width: 100%;
-    margin-bottom: 10px;
-}
+/*.head-user {*/
+/*    height: 700px;*/
+/*    width: 100%;*/
+/*    margin-bottom: 10px;*/
+/*}*/
 .my-page {
     margin: 10px auto;
     text-align: left; 
@@ -114,7 +118,7 @@ body {
     /*width: 95%;*/
 }
 .image-item {
-    border-radius : 8px 0 0 8px; 
+    border-radius : 3px 0 0 3px; 
     background-color: #adadad;
 }
 .image-item > img {
@@ -124,7 +128,7 @@ body {
 .item {
     background-color: skyblue;
     /*text-align: center;*/
-    border-radius : 8px; 
+    border-radius : 3px; 
 }
 .sidemenu {
     margin-bottom: 10px;
@@ -203,30 +207,49 @@ table{
     background    : #ffffff;     /* 文字色     */
   }
 
-  .header-button {
-    display       : inline-block;
-    border-radius : 5%;          /* 角丸       */
-    font-size     : 16pt;        /* 文字サイズ */
-    text-align    : center;      /* 文字位置   */
-    cursor        : pointer;     /* カーソル   */
-    padding       : 12px 12px;   /* 余白       */
-    background    : #fb5144;     /* 背景色     */
-    color         : #ffffff;     /* 文字色     */
-    line-height   : 1em;         /* 1行の高さ  */
-    transition    : .3s;         /* なめらか変化 */
-    box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
-    border        : 1px solid #000066;    /* 枠の指定 */
-  }
-  .header-button:hover {
-    box-shadow    : none;        /* カーソル時の影消去 */
-    color         : #fb5144;     /* 背景色     */
-    background    : #ffffff;     /* 文字色     */
-  }
+  
   .resizeimage img { 
       width: 100%;
     }
   .resizeimage {
     margin-top: 0;
+  }
+  
+  /*.top-aspire {*/
+  /*    height: 100vh;*/
+  /*}*/
+  
+  .header-bgimg {
+      height: 100vh;
+      width: 100%;
+      /*filter: blur(1px);*/
+      /*filter: saturate(50%);*/
+      /*filter: invert(100%);*/
+      filter: opacity(70%);
+      background-size: cover;
+      background-image: url('../images/programming-1.jpeg');
+      /*background-image: url("asset('images/programming-1.jpeg')");*/
+      position: relative;
+  }
+  .header-bgimg > a{
+      color: #fff;
+      position: absolute;
+      text-decoration: none;
+      top: 45%;
+      left: 45%;
+      border: 3px solid #fff;
+      padding: 15px 30px;
+      /*color: #000;*/
+  }
+  /*.top-button > a{*/
+  /*  border: 3px solid #000;*/
+  /*  padding: 15px 30px;*/
+  /*  color: #000;*/
+  /*}*/
+  .header-bgimg > a:hover {
+    color: #000;
+    background-color: #fff;
+    text-decoration: none;
   }
 
 
