chartの色を%ごとに変化

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,8 @@ body {
     margin: 0 auto;
     padding: 0;
     color: #333;
-    background-color: #f8f8f8!important;
+    /*background-color: #f8f8f8!important;*/
+    background-color: #f9fbfe!important;
 }
 /*.header-container {*/
 /*    background-color: #f8f8f8;*/
@@ -63,7 +64,8 @@ body {
 }
 .main-content {
     height: 100vh;
-    background-color: #f8f8f8;
+    /*background-color: #f8f8f8;*/
+    background-color: #f9fbfe;
 }
 .container {
     /*background-color: #fff;*/
@@ -115,15 +117,20 @@ body {
 
 .language-item {
     margin-bottom: 20px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.04);
     /*width: 95%;*/
 }
 .image-item {
     border-radius : 3px 0 0 3px; 
-    background-color: #adadad;
+    background-color: #fff;
+    position: relative;
 }
 .image-item > img {
     width: 50%;
     height: 50%;
+    position: absolute;
+    top: 25%;
+    left: 25%;
 }
 .item {
     background-color: skyblue;
