--- a/public/css/style.css
+++ b/public/css/style.css
@@ -249,11 +249,25 @@ table{
   }
 
 /*レッスン一覧ページ*/
+.lessons-language {
+    height: 100vh;
+    /*background-color: red;*/
+}
+
+.progress-rates {
+    height: 50%;
+}
+
+.rate-items {
+    padding: 0 8%;
+}
 
 .languages {
     padding: 0;
     margin: 0;
     width: 100%;
+    height: 50%;
+    /*background-color: red;*/
     /*display: inline-block;*/
 }
 
